apps/recorder/src/web/middleware/snapshots/recorder__web__middleware__secure_headers__tests__can_override_headers.snap
---
source: apps/recorder/src/web/middleware/secure_headers.rs
expression: normalize_headers(response.headers())
---
{
    "content-length": "0",
    "content-security-policy": "default-src 'self' https:; font-src 'self' https: data:; img-src 'self' https: data:; object-src 'none'; script-src https:; style-src 'self' https: 'unsafe-inline'",
    "new-header": "baz",
    "strict-transport-security": "max-age=631138519",
    "x-content-type-options": "nosniff",
    "x-download-options": "foobar",
    "x-frame-options": "sameorigin",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
}
